Revamping the file-structure to make a bit more sense.
It is now organized according to subject, under four main directories:
  api - to handle http interfaces with the DB
  analytics - the analytics library
  communications - to handle sending queries and receiving responses
  ui - the web UI

'wobsite' is now ui/graphs, and model and bindings remain in the main
directory

--- a/web/app.yaml
+++ b/web/app.yaml
@@ -22,7 +22,7 @@ handlers:
   script: bindings.py
 
 - url: /_ah/mail/.+
-  script: incoming_mail.py
+  script: communications/incoming_mail.py
   login: admin
 
 builtins:
