Business analytics. Now we can track things like churn, user behaviour, etc.

--- a/web/app.yaml
+++ b/web/app.yaml
@@ -21,6 +21,12 @@ handlers:
 - url: /fonts
   static_dir: ui/fonts
 
+- url: /intern/css
+  static_dir: intern/css
+
+- url: /intern/js
+  static_dir: intern/js
+
 - url: .*
   script: bindings.py
 
