--- a/web/cron.yaml
+++ b/web/cron.yaml
@@ -2,3 +2,8 @@ cron:
 - description: send a new batch of queries
   url: /sendQueries
   schedule: every 10 minutes
+
+- description: Tell the backend to refresh our core memcache keys
+  url: /backend/memcache-refresh
+  schedule: every 3 hours
+  target: memcache-refresh
