We've been having problems with duplicated text messages recently, likely because Tropo can be very slow and we were timing out in requests to them.
To rectify this, this diff:
1) Moves the query-sending job to a new backend, where it really belongs.
2) increases the HTTP request limit on the tropo calls (since we have unlimited time on backends)

--- a/web/backends.yaml
+++ b/web/backends.yaml
@@ -3,3 +3,8 @@ backends:
    start: backend/mc_refresh_backend_start.py
    class: B1
    options: dynamic
+
+ - name: query-agent
+   start: backend/mc_refresh_backend_start.py
+   class: B1
+   options: dynamic
