Refresh the analytics memcache keys on a backend once every few hours.
As part of this, /analyze was refactored to use the .analytics-json memcache key which /dashboard uses for the analytics dropdown. This way, both analytics locations are pulling from the same mc key.

--- a/web/backends.yaml
+++ b/web/backends.yaml
@@ -1,10 +1,15 @@
 backends:
+ - name: query-agent
+   start: backend/query_agent_start.py
+   class: B1
+   options: dynamic
+
  - name: memcache-refresh
    start: backend/mc_refresh_backend_start.py
    class: B1
    options: dynamic
 
- - name: query-agent
-   start: backend/query_agent_start.py
+ - name: analytics-refresh
+   start: backend/analytics_backend_start.py
    class: B1
    options: dynamic
